--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
       href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Playfair:ital,opsz,wght@0,5..1200,300..900;1,5..1200,300..900&display=swap"
       rel="stylesheet"
     />
+
+    <!-- fontawesome css  -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>Momo Crochet Collection</title>
     <link
       rel="shortcut icon"
@@ -19,10 +28,12 @@
   </head>
   <body>
     <!-- header section  -->
-    <header id="Home">
-      <h1>Momo Crochet Collection</h1>
-      <p>Handmade Bags & Accessories — Looped with Love..</p>
-      <a href="#our-shop" class="btn">Shop Now</a>
+    <header id="Home" class="container">
+      <div class="content">
+        <h1>Momo Crochet Collection</h1>
+        <p>Handmade Bags & Accessories — Looped with Love..</p>
+        <a href="#our-shop" class="btn">Shop Now</a>
+      </div>
     </header>
 
     <!-- nav section  -->
@@ -341,6 +352,15 @@
 
     <footer>
       <p>&copy; 2025 Momo Crochet Loop | Handmade with Heart</p>
+      <a href="#Home"><i class="fa-regular fa-circle-up fa-2x" id="top"></i></a>
     </footer>
+
+    <!-- fontawesome js  -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/js/all.min.js"
+      integrity="sha512-b+nQTCdtTBIRIbraqNEwsjB6UvL3UEMkXnhzd8awtCYh0Kcsjl9uEgwVFVbhoj3uu1DO1ZMacNvLoyJJiNfcvg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
   </body>
 </html>
